jss-compiler/tests/parser/invalid/invalid_assignment.jss
// Erro sintatico: Atribuicao a um literal numerico e invalida
function void teste() {
    10 = 20;
}
